# DigitizationModule

./: CMakeLists.txt  README.md
devel/: CMakeLists.txt  README.rst
devel/examples/trigger_emul_channels/: flreco-asbdigi.conf  service_manager.conf  trigger_emul_from_channels_SD.brio  trigger_emul_from_channels_SDD.brio
devel/programs/: CMakeLists.txt  produce_geiger_sd_modified.cxx  produce_self_trigger_SD.cxx  produce_self_trigger_hits.cxx  test_geiger_self_trigger.cxx  test_tracker_trigger_algorithm_load_from_file.cxx  thesis_trigger_program.cxx  trigger_algorithm_efficiency_analysis.cxx  trigger_algorithm_efficiency_validation.cxx  trigger_board_implementation.cxx  trigger_emul_from_channels.cxx  trigger_program.cxx  trigger_program_on_signals.cxx
devel/resources/: self_trigger.conf  trigger_emul_from_channels.conf
documentation/: MainPage.rst
resources/examples/ex00/: README.rst  digi-reco.conf
resources/modules/Digitization/config/snemo/demonstrator/simulation/digitization/0.1/: digitization.conf  trigger_parameters.conf
resources/modules/Digitization/urn/db/: snemo_digitization_setup_db.conf  snemo_simulation_digitization_setup_infos.defs
resources/modules/Digitization/urn/resolvers/: snemo_digitization_config_resource_map.conf  snemo_digitization_resource_path_resolver.conf
source/falaise/snemo/digitization/: ID_convertor.cc  ID_convertor.h  calo_ctw.cc  calo_feb_process.cc  calo_feb_process.h  calo_tp.cc  calo_tp.h  calo_tp_data.cc  calo_tp_data.h  calo_tp_to_ctw_algo.cc  calo_tp_to_ctw_algo.h  calo_trigger_algorithm.cc  clock_utils.cc  clock_utils.h  digitization_driver.cc  digitization_driver.h  digitization_module.cc  digitization_module.h  electronic_mapping.cc  electronic_mapping.h  fldigi.cc.in  fldigi.h  fldigi_binreloc.cc  geiger_ctw.cc  geiger_tp.cc  geiger_tp_constants.h  geiger_tp_to_ctw_algo.cc  geiger_tp_to_ctw_algo.h  mapping.cc  mapping.h  resource.cc.in  resource.h  signal_data.cc  signal_to_calo_tp_algo.cc  signal_to_calo_tp_algo.h  signal_to_geiger_tp_algo.cc  signal_to_geiger_tp_algo.h  ssd_to_geiger_tp.h  tempo_utils.cc  tempo_utils.h  (+10 more)
source/falaise/snemo/digitization/detail/: fldigi_sys.cc  fldigi_sys.h
testing/: CMakeLists.txt  test_ID_convertor.cxx  test_bimap.cxx  test_calo_ctw_data.cxx  test_calo_feb_process.cxx  test_calo_tp_to_ctw_algo.cxx  test_calo_trigger_algorithm.cxx  test_digitization_driver.cxx  test_fldigi.cxx  test_geiger_neighbour_trigger.cxx  test_geiger_tp_to_ctw_algo.cxx  test_memory.cxx  test_sd_reader.cxx  test_sd_to_calo_signal_algo.cxx  test_sd_to_ctw_process.cxx  test_sd_to_geiger_signal_algo.cxx  test_sd_to_signal_process.cxx  test_sd_to_tp_process.cxx  test_signal_to_calo_tp_algo.cxx  test_signal_to_geiger_tp_algo.cxx  test_simulated_data_reading.cxx  test_ssd_to_tp_process.cxx  test_tracker_feb_process.cxx  test_tracker_trigger_algorithm.cxx  test_trigger_algorithm.cxx  test_trigger_algorithm_test_fake_ctw.cxx  test_version.cxx
testing/data/: Se82_0nubb-source_strips_bulk_SSD_10_events.brio
tools/: build.sh  clean.sh
